@@ -17,54 +17,65 @@ import java.util.Optional;
 import java.util.stream.Collectors;
 
 @Service
-public class CustomerServiceImpl implements CustomerService  {
-    @Autowired
-    CustomerRepositry costomerRepository;
-
+public class CustomerServiceImpl implements CustomerService {
 
     @Autowired
-    static BankName bankName;
+    private CustomerRepositry costomerRepository;
 
+    @Autowired
+    private LoginRepository loginRepository;
 
-   // private static final String BANK_INITIALS = bankName.bankname;
+    @Autowired
+    private EmailService emailService;
 
-    String BANK_INITIALS = "SBI";
+    @Autowired
+    private StatementRepository statementRepository;
 
+    @Autowired
+    private AccountRepository accountRepository;
+
+    @Autowired
+    private Transactionrepository transactionRepository;
+
+    @Autowired
+    private WithdrawalRepository withdrawalRepository;
+
+    @Autowired
+    private ManagerRequestRepository managerRequestRepository;
+
+    private static final String BANK_INITIALS = "SBI";
 
     public CustomerServiceImpl(CustomerRepositry costomerRepository, LoginRepository loginRepository) {
         this.costomerRepository = costomerRepository;
         this.loginRepository = loginRepository;
     }
 
-
-
     @Override
     @Transactional
     public Customer saveCustomer(Customer customer) {
-        // Generate account number in the format: "KBI##########"
-
-        String accountNumber = BANK_INITIALS + customer.getPanCard() + customer.getCustomerName().substring(1,3);
+        String accountNumber = BANK_INITIALS + customer.getPanCard() + customer.getCustomerName().substring(1, 3);
         String password = generateRandomPassword(8);
-
 
         customer.getAccount().setAccNo(accountNumber.toUpperCase());
 
         Customer savedCustomer = costomerRepository.save(customer);
-        if (customer.getLogin() == null) {
-            Login login = new Login();
 
-            customer.setLogin(login);
+        if (customer.getLogin() == null) {
+            customer.setLogin(new Login());
         }
 
         customer.getLogin().setAccountNumber(accountNumber);
         customer.getLogin().setPassWord(password);
-        emailService.sendWelcomeEmail(savedCustomer.getEmailId(), savedCustomer.getCustomerName(),savedCustomer.getAccount().getAccNo(),savedCustomer.getLogin().getPassWord());
-       return savedCustomer;
 
+        emailService.sendWelcomeEmail(
+                savedCustomer.getEmailId(),
+                savedCustomer.getCustomerName(),
+                savedCustomer.getAccount().getAccNo(),
+                savedCustomer.getLogin().getPassWord()
+        );
+
+        return savedCustomer;
     }
-
-
-
 
     public String generateRandomPassword(int length) {
         String characters = "ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789@#$%&*!";
@@ -76,47 +87,37 @@ public class CustomerServiceImpl implements CustomerService  {
         return password.toString();
     }
 
-
-
-
-
-
-
-
-
     @Override
     public List<Customer> getAllCustomers() {
-
         return costomerRepository.findAll();
     }
 
     @Override
-    public  Customer getById(Long id) {
+    public Customer getById(Long id) {
         return costomerRepository.findById(id)
-                .orElseThrow(()->new RuntimeException("Customer not found with ID :"+id));
-}
+                .orElseThrow(() -> new RuntimeException("Customer not found with ID :" + id));
+    }
 
     @Override
     public void deleteById(Long id) {
-        if (!costomerRepository.existsById(id)){
-            throw new RuntimeException("id "+ id +" is not present ..!!");
-
-        }costomerRepository.deleteById(id);
+        if (!costomerRepository.existsById(id)) {
+            throw new RuntimeException("id " + id + " is not present ..!!");
+        }
+        costomerRepository.deleteById(id);
     }
 
     @Override
     public void deleteAll() {
-        List a = costomerRepository.findAll();
-        if(a.size()<1){
+        List<Customer> customers = costomerRepository.findAll();
+        if (customers.isEmpty()) {
             throw new RuntimeException("No Record Available to delete");
-        }costomerRepository.deleteAll();
-
-
+        }
+        costomerRepository.deleteAll();
     }
 
     @Override
     public Customer softDelete(Long id) {
-        Optional <Customer> selectedRow = costomerRepository.findById(id);
+        Optional<Customer> selectedRow = costomerRepository.findById(id);
         Customer customer = selectedRow.get();
         customer.setDeleteCustomer(true);
         return costomerRepository.save(customer);
@@ -124,28 +125,22 @@ public class CustomerServiceImpl implements CustomerService  {
 
     @Override
     public List<Customer> getOnlyNotDeleted() {
-        List <Customer> allCustomers = costomerRepository.findAll();
-       List <Customer> notDeleted = allCustomers
-               .stream().filter(c->!c.isDeleteCustomer()).toList();
-       
-
-        return notDeleted;
+        return costomerRepository.findAll().stream()
+                .filter(c -> !c.isDeleteCustomer())
+                .collect(Collectors.toList());
     }
 
     @Override
     public List<Customer> getAllCustomersSorted() {
-        List<Customer> allCustomer = costomerRepository.findAll();
-        List<Customer> sortedCustomers = allCustomer.stream()
-                .sorted((c1,c2)->c1.getCustomerName()
-                        .compareToIgnoreCase(c2.getCustomerName()))
+        return costomerRepository.findAll().stream()
+                .sorted((c1, c2) -> c1.getCustomerName().compareToIgnoreCase(c2.getCustomerName()))
                 .collect(Collectors.toList());
-        return sortedCustomers;
     }
 
     @Override
     public ResponseEntity<Customer> updateCustomer(Long id, Customer c) {
         Optional<Customer> existCustomer = costomerRepository.findById(id);
-        if(existCustomer.isPresent()){
+        if (existCustomer.isPresent()) {
             Customer customer = existCustomer.get();
             customer.setCustomerName(c.getCustomerName());
             customer.setMobileNumber(c.getMobileNumber());
@@ -153,46 +148,30 @@ public class CustomerServiceImpl implements CustomerService  {
             return ResponseEntity.ok(saved);
         }
         return ResponseEntity.notFound().build();
-}
-
-@Autowired
-    StatementRepository statementRepository;
-
-    @Override
-    public Transaction depositeAmount(Transaction transaction ) {
-
-        Transaction t=  transactionRepository.save(transaction);
-        return t;
     }
 
-
-
-
-
-    @Autowired
-     AccountRepository accountRepository;
-
-    @Autowired
-     Transactionrepository transactionRepository;
+    @Override
+    public Transaction depositeAmount(Transaction transaction) {
+        return transactionRepository.save(transaction);
+    }
 
     @Transactional
     public String depositrAmountByID(Long id, String depositeMode, Double amount, String depositeDetails) {
-
         Optional<Account> accountOptional = accountRepository.findById(id);
 
         if (!accountOptional.isPresent()) {
             return "User not found";
         }
+
         Account account = accountOptional.get();
         Transaction transaction = new Transaction();
-        transaction.setdepositeMode(depositeMode);
+        transaction.setDepositeMode(depositeMode);
         transaction.setAmount(amount);
         transaction.setAccountNumber(account.getAccNo());
         transaction.setDepositeDetails(depositeDetails);
         transaction.setAccount(account);
 
-
-        account.setBalance(account.getBalance()+amount);
+        account.setBalance(account.getBalance() + amount);
         transactionRepository.save(transaction);
         accountRepository.save(account);
 
@@ -203,35 +182,36 @@ public class CustomerServiceImpl implements CustomerService  {
         statement.setTransactionType("DEPOSITE");
         statementRepository.save(statement);
 
-        return "Transaction successful, "+ amount + " Succesfully deposited in " + account.getAccNo() + " on, "+ transaction.getTime();
+        return "Transaction successful, " + amount + " Succesfully deposited in " + account.getAccNo() + " on, " + transaction.getTime();
     }
 
-    @Autowired
-    WithdrawalRepository withdrawalRepository;
-
     @Override
-    public java.lang.String widrowAmount(Long accId, java.lang.String withdrawMode, java.lang.String withdrawDetails, Double amount){
-
+    public String widrowAmount(Long accId, String withdrawMode, String withdrawDetails, Double amount) {
         Optional<Account> accountOptional = accountRepository.findById(accId);
         if (!accountOptional.isPresent()) {
             return "User not found with id, : " + accId;
         }
-        Account account = accountOptional.get();
-       Withdrawal withdrawal = new Withdrawal();
-        if (account.getBalance()<=100){
-            return "inefficient balance for deposite, minimum balance should be 100 rupees...!!";
 
+        Account account = accountOptional.get();
+
+        if (account.getBalance() <= 100) {
+            return "inefficient balance for deposite, minimum balance should be 100 rupees...!!";
         }
-        Double remainingBalance = account.getBalance()-amount;
-        if (remainingBalance<100){
+
+        Double remainingBalance = account.getBalance() - amount;
+        if (remainingBalance < 100) {
             return "inefficient balance";
         }
+
+        Withdrawal withdrawal = new Withdrawal();
         withdrawal.setAmount(amount);
         withdrawal.setAccountNumber(account.getAccNo());
         withdrawal.setWithdrawMode(withdrawMode);
         withdrawal.setWithdrawDetails(withdrawDetails);
-        account.setBalance(account.getBalance()-amount);
         withdrawal.setAccount(account);
+
+        account.setBalance(account.getBalance() - amount);
+
         withdrawalRepository.save(withdrawal);
         accountRepository.save(account);
 
@@ -242,48 +222,16 @@ public class CustomerServiceImpl implements CustomerService  {
         statement.setTransactionType("WITHDRAW");
         statementRepository.save(statement);
 
-
-        return "succesfully widrowed, " + amount + " from "+ account.getAccNo() +" available balance is, " + account.getBalance();
+        return "succesfully widrowed, " + amount + " from " + account.getAccNo() + " available balance is, " + account.getBalance();
     }
-
-
-
-
-
-
-
-
-
-
 
     public List<Statement> accounStatement(String accountNumber) {
         return statementRepository.findByAccountNumber(accountNumber);
-
     }
-
-
-
 
     public List<Statement> statementByDateS(String accountNumber, Date startDate, Date endDate) {
         return statementRepository.statementByDateS(accountNumber, startDate, endDate);
-
-
-
     }
-
-    @Autowired
-    private LoginRepository loginRepository;
-
-
-
-
-
-    @Autowired
-    private EmailService emailService;
-
-
-
-
 
     @Override
     public String validateLogin(String accountNumber, String password) {
@@ -292,7 +240,7 @@ public class CustomerServiceImpl implements CustomerService  {
         if (loginOptional.isPresent()) {
             Login login = loginOptional.get();
             if (login.getPassWord().equals(password)) {
-                return "true"; // Login successful
+                return "true";
             } else {
                 return "WRONG PASSWORD";
             }
@@ -301,43 +249,17 @@ public class CustomerServiceImpl implements CustomerService  {
         }
     }
 
+    @Override
+    public String changePassword(String accountNumber, String password) {
+        Optional<Login> loginOpt = loginRepository.findByAccountNumber(accountNumber);
+        if (!loginOpt.isPresent()) {
+            throw new IllegalArgumentException("Account number not found: " + accountNumber);
+        }
 
+        Login login = loginOpt.get();
+        login.setPassWord(password);
+        loginRepository.save(login);
 
-
-
-@Autowired
-ManagerRequestRepository managerRequestRepository;
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+        return "Seccesfully change account number";
+    }
 }
-
-
-
-
-
-
-
-
-
-
-
-//SELECT * FROM ACCOUNT ;
-//SELECT * FROM ADDRESSES ;
-//SELECT * FROM  CUSTOMER ;
-//SELECT * FROM TRANSACTION;
-
-
-
